[package]
name = "rust_dll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.54.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
] }

#version = "0.52"
#features = [
#    "Data_Xml_Dom",
#    "Win32_Foundation",
#    "Win32_Security",
#    "Win32_System_Threading",
#    "Win32_UI_WindowsAndMessaging",
#    "Win32_System_SystemServices"
#]
